--- a/1.CRUD-operations-on-a-single-entity/pom.xml
+++ b/1.CRUD-operations-on-a-single-entity/pom.xml
@@ -20,7 +20,14 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.2.7.Final</version>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
