--- a/1.CRUD-operations-on-a-single-entity/pom.xml
+++ b/1.CRUD-operations-on-a-single-entity/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>1.CRUD-operations-on-a-single-entity</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
